Test ranking constant config generation